--- a/Datos/Infrastructure/equipodBD.Context.tt
+++ b/Datos/Infrastructure/equipodBD.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"equipodDB.edmx";
+const string inputFile = @"equipodBD.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
